# Lark

./: .gitignore  README.md
.github/workflows/: fastapi.yml  main.yml
.trae/documents/: cloud_bird_desktop_adaptation_plan.md  cloud_bird_desktop_full_rewrite_plan.md
backend/: .gitignore  BACKEND_README.md  Db.py  README.md  SQLite-WAL优化总结.md  Security.py  main.py  requirements.txt
backend/app/: Db.py  Logset.py  Security.py  main.py  schema.py
backend/app/datacontrol/: BirdDb.py  DeviceDb.py  DeviceLogDb.py  FeedingDb.py  FirmwareDb.py  SensorDb.py  SensorUploadDb.py  UserDb.py
backend/app/deviceapi/: Device.py  README.md
backend/app/docs/: async-device-version.md
backend/app/feedingapi/: Feeding.py
backend/app/firmwareapi/: Firmware.py  README.md
backend/app/invitationapi/: InvitationCode.py  __init__.py
backend/app/logapi/: DeviceLog.py
backend/app/sensorapi/: SensorData.py  SensorUpload.py
backend/app/stream/: Device.py  README.md  Stream.py  Viewer.py
backend/app/tests/: test_birds.py  test_db.py  test_login.py  test_users.py  test_users_cases.md
backend/app/userapi/: Bird.py  Login.py  User.py
backend/database/: lark.db  lark.db-shm  lark.db-wal  lark.db.bak
backend/stream/: Device.py  Stream.py  Viewer.py  device.py  stream.py  viewer.py
backend/userapi/: Login.py  User.py  schema.py
docs/: 云养鸟系统框架设计文档.md  演示视频拍摄大纲.md
embedded/: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
embedded/ESP32-C3/: CMakeLists.txt  sdkconfig  sdkconfig.old
embedded/ESP32-C3/components/Wifista/: CMakeLists.txt  OTA.c  Websocket.c  Wifista.c
embedded/ESP32-C3/components/Wifista/include/: Wifista.h
embedded/ESP32-C3/docs/: WS_CORESPONSE.md  secret-debug.md  ws-debug-journey.md
embedded/ESP32-C3/main/: CMakeLists.txt  idf_component.yml  main-pms.c  main-sgp30.cpp  main-sound.c  main-uv.c  main-veml.cpp  main.c  main.cpp  tasks.c  tasks.cpp  tasks.h  ws_process.c
embedded/ESP32-camera/: .gitignore  sdkconfig_s3
embedded/ESP32-camera/components/Wifista/: CMakeLists.txt  WifiSecurity.c
embedded/ESP32-camera/components/Wifista/include/: Wifista.h
embedded/ESP32-camera/components/sht4x/: CMakeLists.txt  sensirion_hw_i2c_implementation.c
embedded/ESP32-camera/docs/: LOG_REFERENCE.md
embedded/ESP32-camera/main/: CMakeLists.txt  device_secret.h  i2c_recovery.c  i2c_recovery.h  idf_component.yml  tasks.h
embedded/ESP32-camera/scripts/: upload_firmware.sh
embedded/components/Camera/: CMakeLists.txt  Camera.c
embedded/components/Camera/include/: Camera.h
embedded/components/Wifista/: CMakeLists.txt  OTA.c  Websocket.c  WifiSecurity.c  Wifista.c
embedded/components/Wifista/include/: Wifista.h
embedded/components/sht4x/: sensirion_hw_i2c_implementation.c
embedded/docs/: remote-log-design.md  tls-connection-reuse-analysis.md  ws_process_design.md
embedded/main/: CMakeLists.txt  idf_component.yml  main.c  main.h  remote_log.c  remote_log.h  tasks.c  tasks.h  ws_process.c
frontend/: .gitignore  FRONTEND_README.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: style.css
frontend/src/cloud/: CloudLayout.vue  cloud_App.vue  router.ts
frontend/src/components/: AirQualityDetail.vue  AuthPage.vue  BirdsPage.vue  Data.vue  Device.vue  (+15 more)
(+115 files in other folders)
